# LiquidityHedge

./: .gitignore  BUSINESS_PLAN.md  CLAUDE.md  PITCH_DECK_OUTLINE.md  README.md  contribution_guide.md  liquidity_hedge_protocol_poc(1).md
EXAMPLE test_deployment_v2/: Dockerfile.workers  alembic.ini  calc_tx_fee_from_sig.py  email_notifier.py  execution.py  fly-instance2.toml  fly-instance2.toml.template  fly-production1.toml  fly-workers.toml  fly.toml  lp_strategy.py  multiuser_adapter.py  session_manager.py  test_capital_deployment_fix.py  test_close_position_parse_fees.py  test_csv_error_tracking.py  test_fees_and_tvl_complete.py  test_live_simplified.py  test_live_tx_parsing.py  test_range_target_fix.py  test_real_data_retrieval.py  test_simplified_flow.py  test_swap_costs.py  test_tx_costs_simple.py  test_tx_fee_final.py  test_tx_fee_v2.py  test_wsol_cleanup.py  user_context.py  volume_calculator.py
analysis/: business_model.md  comprehensive_analysis.ipynb  comprehensive_analysis_executed.ipynb  parameter_optimization.ipynb  pricing_analysis.ipynb  pricing_methodology.md  protocol_analysis.ipynb  rt_vs_lp_analysis.ipynb  simulation_report.md
lh-protocol/programs/lh-core/: Cargo.toml
lh-protocol/programs/lh-core/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs  orca.rs  pyth.rs  state.rs
lh-protocol/programs/lh-core/src/certificates/: instructions.rs
lh-protocol/programs/lh-core/src/pool/: instructions.rs
lh-protocol/programs/lh-core/src/position_escrow/: instructions.rs
lh-protocol/programs/lh-core/src/pricing/: instructions.rs
(+371 files in other folders)
