[package]
name = "lh-core"
version = "0.1.0"
description = "Liquidity Hedge Protocol — on-chain core"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lh_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-mode = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token"] }
